# MPC

./: README.md
controller/: CMakeLists.txt  package.xml
controller/config/: mpc_params.yaml
controller/include/: MPCController.h
controller/launch/: mpc_controller_airsim.launch  mpc_controller_sim.launch
controller/rviz/: mpc.rviz
controller/src/: MPCController.cpp  mpc_controller_node.cpp
pseudo_path/: CMakeLists.txt  package.xml
pseudo_path/launch/: pseudo_path.launch
pseudo_path/src/: pseudo_path.cpp
quadrotor_msgs/: CMakeLists.txt
quadrotor_msgs/msg/: polynomial.msg
